[tool.poetry]
name = "skripsi-mampus"
version = "0.1.0"
description = ""
authors = ["ssabrut <michael.gunawan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "^0.25.0"
auto-gptq = "^0.5.1"
optimum = "^1.14.1"
python-dotenv = "^1.0.0"
transformers = "^4.35.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
