[tool.poetry]
name = "skripsi-mampus"
version = "0.1.0"
description = ""
authors = ["ssabrut <michael.gunawan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "^0.25.0"
auto-gptq = "^0.5.1"
optimum = "^1.14.1"
python-dotenv = "^1.0.0"
transformers = "^4.35.2"
llama-index = "^0.9.12"
langchain = "^0.0.348"
langchain-experimental = "^0.0.45"
wheel = "^0.42.0"
llama-cpp-python = "^0.2.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
